adding delete and edit

--- a/Front-end/article-app/src/Pages/Admin.css
+++ b/Front-end/article-app/src/Pages/Admin.css
@@ -26,3 +26,11 @@ form{
     gap:15px;
     
 }
+.articles-edit{
+    display: flex;
+    flex-direction: row;
+    gap: 120px;
+
+
+padding-top: 100px;
+}
